Change structure to match nuxt repo

--- a/.github/workflows/waiting-for-review-labeler.yml
+++ b/.github/workflows/waiting-for-review-labeler.yml
@@ -6,12 +6,21 @@ on:
 
 permissions:
   pull-requests: write
+  contents: read
 
 jobs:
-  action:
+  apply_needs_review_label:
     runs-on: ubuntu-latest
+    name: Apply Label
     steps:
-      - uses: EricStrohl/waiting-for-review-labeler@main
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: yarn install
+      - name: Build apply_needs_review_label
+        run: ACTION_NAME=apply_needs_review_label EXTENSION=ts yarn build_action
+      - name: Run apply_needs_review_label
+        uses: ./.github/custom_actions/apply_needs_review_label
         with:
           hours-before-add-label: 0
           label-name: 'needs-review'
